--- a/pay.html
+++ b/pay.html
@@ -3,9 +3,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title></title>
+	<title>Pay Page</title>
 </head>
 <body>
-
+	<h1>Pay here</h1>
 </body>
 </html>
