updates to buy, index and pay html doucments

--- a/pay.html
+++ b/pay.html
@@ -7,5 +7,13 @@
 </head>
 <body>
 	<h1>Pay here</h1>
+	<p>My is Habeeb</p>
+	<p>My is Habeeb</p>
+	<h1>Pay here</h1>
+	<p>My is Habeeb</p>
+	<p>My is Habeeb</p>
+	<h1>Pay here</h1>
+	<p>My is Habeeb</p>
+	<p>My is Habeeb</p>
 </body>
 </html>
