--- a/index.html
+++ b/index.html
@@ -6,9 +6,6 @@
 	<title>My Home Page</title>
 </head>
 <body>
-	<h1>Home Page</h1>
-	<h1>Pay here</h1>
-	<p>My is Habeeb</p>
-	<p>My is Habeeb</p>
+	<p>This was edited from the main branch and edited in ticketapp3</p>
 </body>
 </html>
